<resources>
    <string name="app_name">MangaReader</string>
    <string name="book_name">Book name</string>
    <string name="author_name_label">Author:</string>
    <string name="year_of_create_label">Year:</string>
    <string name="description_label">Description</string>
    <string name="description_example">...................................................................................................................................................................</string>
    <string name="part_name">part_name</string>
    <string name="status">Status:</string>
    <string name="count_chapters">Chapters count:</string>
    <string name="chapters_label">Chapters</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="chapter">Chapter</string>
    <string name="settings">Settings</string>
    <string name="name_of_collections">Name_of_collections</string>
    <string name="bookmark_description">bookmark_description</string>
    <string name="my_library_label">My Library label\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_here">There is nothing here,\nplease log in</string>
    <string name="more">See more</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="already_logged_in">You are already logged in</string>
    <string name="successfully_log_in">You successfully logged in</string>
    <string name="successfully_log_out">You successfully logged out</string>
    <string name="user_not_found">User not found</string>
    <string name="no_data">No data</string>
    <string name="set">"?"</string>
</resources>